slashies-macros/tests/command/e15_invalid_channel_types_format.stderr
error: Invalid "channel_types" attribute. Attribute must be of the form channel_types(type1, type2...)
 --> tests/command/e15_invalid_channel_types_format.rs:9:5
  |
9 |     #[channel_types]
  |     ^^^^^^^^^^^^^^^^
